--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "cross-env": "^5.0.1",
     "koa": "^2.4.1",
+    "mongoose": "^5.0.13",
     "nuxt": "latest",
     "source-map-support": "^0.4.15"
   },
