--- a/package.json
+++ b/package.json
@@ -5,25 +5,32 @@
   "author": "macheng2017 <gos360@163.com>",
   "private": true,
   "scripts": {
-    "dev": "backpack dev",
+    "dev": "nodemon -w ./server -w ./start.js --exec node ./start.js",
     "build": "nuxt build && backpack build",
     "start": "cross-env NODE_ENV=production node build/main.js",
     "precommit": "npm run lint",
     "lint": "eslint --ext .js,.vue --ignore-path .gitignore ."
   },
   "dependencies": {
+    "babel-polyfill": "^6.26.0",
     "cross-env": "^5.0.1",
     "koa": "^2.4.1",
+    "koa-router": "^7.4.0",
     "mongoose": "^5.0.13",
     "nuxt": "latest",
+    "ramda": "^0.25.0",
+    "sha1": "^1.1.1",
     "source-map-support": "^0.4.15"
   },
   "devDependencies": {
     "babel-eslint": "^7.1.1",
+    "babel-preset-latest-node": "^1.0.0",
+    "babel-preset-stage-2": "^6.24.1",
+    "babel-preset-stage-3": "^6.24.1",
     "backpack-core": "^0.3.0",
     "eslint": "^3.13.1",
-    "eslint-loader": "^1.9.0",
     "eslint-config-standard": "^10.2.1",
+    "eslint-loader": "^1.9.0",
     "eslint-plugin-html": "^2.0.3",
     "eslint-plugin-import": "^2.2.0",
     "eslint-plugin-node": "^4.2.2",
