--- a/package.json
+++ b/package.json
@@ -19,10 +19,12 @@
     "mongoose": "^5.0.13",
     "nuxt": "latest",
     "ramda": "^0.25.0",
+    "raw-body": "^2.3.2",
     "request": "^2.85.0",
     "request-promise": "^4.2.2",
     "sha1": "^1.1.1",
-    "source-map-support": "^0.4.15"
+    "source-map-support": "^0.4.15",
+    "xml2js": "^0.4.19"
   },
   "devDependencies": {
     "babel-eslint": "^7.1.1",
