--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "babel-polyfill": "^6.26.0",
     "cross-env": "^5.0.1",
+    "ejs": "^2.5.8",
     "koa": "^2.4.1",
     "koa-router": "^7.4.0",
     "mongoose": "^5.0.13",
