--- a/package.json
+++ b/package.json
@@ -12,14 +12,16 @@
     "lint": "eslint --ext .js,.vue --ignore-path .gitignore ."
   },
   "dependencies": {
+    "ajv": "^6.4.0",
     "axios": "^0.18.0",
-    "babel-polyfill": "^6.26.0",
     "cross-env": "^5.0.1",
+    "css-loader": "^0.28.11",
     "ejs": "^2.5.8",
     "formstream": "^1.1.0",
     "koa": "^2.4.1",
     "koa-router": "^7.4.0",
     "mongoose": "^5.0.13",
+    "node-sass": "^4.8.3",
     "nuxt": "latest",
     "pug": "^2.0.3",
     "ramda": "^0.25.0",
@@ -27,11 +29,12 @@
     "request": "^2.85.0",
     "request-promise": "^4.2.2",
     "sha1": "^1.1.1",
-    "source-map-support": "^0.4.15",
+    "vue-style-loader": "^4.1.0",
     "xml2js": "^0.4.19"
   },
   "devDependencies": {
     "babel-eslint": "^7.1.1",
+    "babel-polyfill": "^6.26.0",
     "babel-preset-latest-node": "^1.0.0",
     "babel-preset-stage-2": "^6.24.1",
     "babel-preset-stage-3": "^6.24.1",
@@ -45,6 +48,9 @@
     "eslint-plugin-promise": "^3.4.0",
     "eslint-plugin-standard": "^3.0.1",
     "nodemon": "^1.11.0",
-    "scmp": "^2.0.0"
+    "sass-loader": "^7.0.1",
+    "scmp": "^2.0.0",
+    "source-map-support": "^0.4.15",
+    "webpack": "^4.6.0"
   }
 }
