--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "request": "^2.85.0",
     "request-promise": "^4.2.2",
     "sha1": "^1.1.1",
+    "vue-awesome-swiper": "^3.1.3",
     "vue-style-loader": "^4.1.0",
     "xml2js": "^0.4.19"
   },
