--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "ajv": "^6.4.0",
     "axios": "^0.18.0",
+    "cheerio": "^1.0.0-rc.2",
     "cross-env": "^5.0.1",
     "css-loader": "^0.28.11",
     "ejs": "^2.5.8",
