--- a/package.json
+++ b/package.json
@@ -25,7 +25,9 @@
     "node-sass": "^4.8.3",
     "nuxt": "latest",
     "pug": "^2.0.3",
+    "qiniu": "^7.1.3",
     "ramda": "^0.25.0",
+    "random-token": "^0.0.8",
     "raw-body": "^2.3.2",
     "request": "^2.85.0",
     "request-promise": "^4.2.2",
