--- a/package.json
+++ b/package.json
@@ -35,7 +35,8 @@
     "socks5-http-client": "^1.0.3",
     "vue-awesome-swiper": "^3.1.3",
     "vue-style-loader": "^4.1.0",
-    "xml2js": "^0.4.19"
+    "xml2js": "^0.4.19",
+    "xss": "^0.3.8"
   },
   "devDependencies": {
     "babel-eslint": "^7.1.1",
