--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "ejs": "^2.5.8",
     "formstream": "^1.1.0",
     "koa": "^2.4.1",
+    "koa-bodyparser": "^4.2.0",
     "koa-router": "^7.4.0",
     "mongoose": "^5.0.13",
     "node-sass": "^4.8.3",
