--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "nuxt": "latest",
     "pug": "^2.0.3",
     "qiniu": "^7.1.3",
+    "qiniu-web-uploader": "^2.1.2",
     "ramda": "^0.25.0",
     "random-token": "^0.0.8",
     "raw-body": "^2.3.2",
