--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "request": "^2.85.0",
     "request-promise": "^4.2.2",
     "sha1": "^1.1.1",
+    "shelljs": "^0.8.2",
     "socks5-http-client": "^1.0.3",
     "vue-awesome-swiper": "^3.1.3",
     "vue-style-loader": "^4.1.0",
