--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "koa": "^2.4.1",
     "koa-bodyparser": "^4.2.0",
     "koa-router": "^7.4.0",
+    "koa-session": "^5.8.1",
     "mongoose": "^5.0.13",
     "node-sass": "^4.8.3",
     "nuxt": "latest",
