--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "socks5-http-client": "^1.0.3",
     "vue-awesome-swiper": "^3.1.3",
     "vue-style-loader": "^4.1.0",
+    "wechat-pay": "^0.3.2",
     "xml2js": "^0.4.19",
     "xss": "^0.3.8"
   },
